           Changes in BB version 2009.06-1 
  
  o Added function multiStart to start BBoptim or BBsolve from multiple
     initial points.  

  o Added BBoptim wrapper function. The wrapper functions BBoptim and BBsolve
     are the preferred user interface.  

  o Added checks in sane() and dfsane() for an objective function returning 
     a non-vector result.  
  
  o Added a check to spg() that a user supplied gradient gives a result close
      to grad from numDeriv (which means numDeriv is now required).  

  o Added check in spg() for an objective function returning a non-scalar result,
     with an automatic fix if the result is length 1.  

  o In nlsolve demo nsim was reduced from 100 to 20 and in nlmin demo the optim
      examples were commented out because of testing time constraints on CRAN.
 
  o Added BBsolve wrapper function.  

  o Minor documentation fixes found by the new parser in R-devel.


           Changes in BB version 2008.11-1
  
  o "eps" decreased to 1.e-10 (from 1.e-08) in sane, to be consistent 
      with "eps" for dfsane.

  o Nelder-Mead start option for poor starting values in sane and dfsane.

  o Steplength for first iteration was re-scaled in sane and dfsane.

  o Retard scheme is introduced close to solution in sane and dfsane.

  o A new stopping criterion "noimp" is introduced (flag=4 in sane, flag=3 in
    dfsane).

  o "optim" can be invoked using "L-BFGS-B" when "sane" is unsuccessful 
    (type = 4 or 5) by setting BFGS of the control list in the sane arguments.

  o "optim" can be invoked using "L-BFGS-B" when "dfsane" is unsuccessful 
    (type = 2 or 5) by setting BFGS of the control list in the dfsane arguments.
 
  o "pbest" and "normF.best are now returned from sane and dfsane.


           Changes in BB version 2008.8-1
  
  o fixed bug in sane and spg (previously fixed in dfsane) when tol is already 
     ok initially and while loop is skipped, so flag in result is not set. Also